v1.4.0/crvs-systems/understanding-crvs.md
---
description: Provides useful links to documentation about CRVS
---

# Understanding CRVS

Before considering to build a CRVS system using OpenCRVS it is important to understand the business domain. There is a lot of helpful material that explains what CRVS is and how it should work and this section highlights a number of useful references. Take the time to review the domain specific material below before proceeding with an implementation of OpenCRVS.&#x20;

| CRVS Reference                                                                                          | Description                                                                                                                                                                    | Link                                                                                                                                                                                                                 |
| ------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| (UN) Handbook on Civil Registration and Vital Statistics Systems: Management, Operation and Maintenance | An exhaustive reference of administrative arrangements, operational functions, quality, interoperability and digitisation of civil registration and vital statistics systems   | [https://unstats.un.org/unsd/demographic-social/Standards-and-Methods/files/Handbooks/crvs/crvs-mgt-E.pdf](https://unstats.un.org/unsd/demographic-social/Standards-and-Methods/files/Handbooks/crvs/crvs-mgt-E.pdf) |
| The Civil Registration and Vital Statistics Digitisation Guidebook (CRVS-DGB)                           | An online resource that provides step-by-step guidance for countries to plan, analyse, design and implement digitized systems and automated processes for CRVS                 | [http://www.crvs-dgb.org/en/](http://www.crvs-dgb.org/en/)                                                                                                                                                           |
