v1.9.0/crvs-systems/understanding-crvs.md
---
description: Provides useful links to documentation about CRVS
---

# Understanding CRVS

Before considering to build a CRVS system using OpenCRVS it is important to understand the business domain. There is a lot of helpful material that explains what CRVS is and how it should work and this section highlights a number of useful references.&#x20;

To gain a broader understanding of Civil Registration and Vital Statistics (CRVS) systems and their importance, we recommend the following key resources:

* **World Bank Group / Global CRVS Group – Self-Paced Online Course on CRVS Systems**
  A foundational course covering the principles, benefits, and design of CRVS systems. Free and available online.
  👉 [Take the course on the World Bank Open Learning Campus](https://www.worldbank.org/en/olc/course/34651)
* **(UN) Handbook on Civil Registration and Vital Statistics Systems: Management, Operation and Maintenance**
  An exhaustive reference of administrative arrangements, operational functions, quality, interoperability and digitisation of civil registration and vital statistics systems.
  👉 [Download from the UN Stats website](https://unstats.un.org/unsd/demographic-social/Standards-and-Methods/files/Handbooks/crvs/crvs-mgt-E.pdf)
* **APAI-CRVS: Africa Programme on Accelerated Improvement of Civil Registration and Vital Statistics**
  The regional initiative guiding CRVS strengthening across Africa.
  👉 [Visit the APAI-CRVS website](https://apai-crvs.uneca.org/)
*   **Get Every One in the Picture – CRVS Systems Improvement Framework**
    A regional CRVS strengthening platform (Asia–Pacific), offering frameworks, assessments, advocacy materials, and eLearning.

    👉 [Visit the Get in the Picture website](https://www.getinthepicture.org/)
*   **The Civil Registration and Vital Statistics Digitisation Guidebook (CRVS-DGB)**
    An online resource that provides step-by-step guidance for countries to plan, analyse, design and implement digitized systems and automated processes for CRVS

    👉 [Visit the CRVS-DGB](http://www.crvs-dgb.org/en/)
